<resources>
    <string name="app_name">Onboarding</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="body">Join an activity. Start a challenges and follow-up your progress.</string>
    <string name="title1">Holistic approach</string>
    <string name="log_in_header">Sign In</string>
    <string name="forgot_password"><font color='#00000'>I forgot my </font><u><font color='#FF9E9E'>password</font></u></string>
    <string name="create_account"><u>Create new account</u></string>
    <string name="or">or</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">E-mail</string>
    <string name="home_featured">Featured</string>
    <string name="program_header">16:8 Intermittant \nFasting</string>
    <string name="program_description">Rejevunation, Get Fit, Mental \nHealth</string>
    <string name="program_info">12 challenges</string>
    <string name="home_programs">Programs</string>
    <string name="try_challenge">Try Challenge</string>
    <string name="challenge_header">Water Fasting</string>
    <string name="challenge_description">Detox and Rejevunation,\nMental Health</string>
    <string name="challenge_info">Lorem ipsum dolor sit amet… \nLorem ipsum dolor sit amet… \nLorem ipsum dolor sit amet… </string>
    <string name="detail_title1">16:8 Intermitting Fasting</string>
    <string name="detail_title2">Description</string>
    <string name="detail_header">Detox and Rejuvanation Program</string>
    <string name="detail_content">Intermittent fasting(IF) is not a diet, it’s an eating pattern that cycles between periods of fasting and eating. Intermittent fasting doesn’t change what you eat, it changes when you eat.
In this respect, it’s not a diet in the conventional</string>
    <string name="fav_counter">com.example.onboarding.fav_counter</string>
    <string name="program_header2">14 Day Fasting Program</string>
    <string name="welcome_user">Welcome Univenn</string>
    <string name="menu_item1">Profile Settings</string>
    <string name="menu_item2">Articles</string>
    <string name="menu_item3">Reminders</string>
    <string name="menu_item4">Application Settings</string>
    <string name="menu_item5">Premium</string>
    <string name="profile_favorites">Favorites</string>
    <string name="join_now">JOIN NOW</string>
    <string name="featured_text">EXPLORE\nNOW</string>

</resources>