<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFE"
    tools:context=".home.ChallengeDetailFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <ImageView-->
<!--            android:id="@+id/spacer"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="-250px"-->
<!--            android:background="@drawable/toolbar_rectangle"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"/>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fav_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/favorite_icon"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@color/theme_color"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/detail_page_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxWidth="326dp"
            android:text="@string/detail_title1"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/detail_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:maxWidth="326dp"
            android:text="@string/detail_header"
            android:textColor="#627180"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_title"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/detail_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_thin"
            android:maxWidth="326dp"
            android:text="@string/detail_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_header"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/detail_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat_semibold"
            android:maxWidth="326dp"
            android:text="@string/detail_content"
            android:textColor="#627180"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_content1"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/detail_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxWidth="326dp"
            android:text="@string/detail_title2"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_content2"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/detail_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_thin"
            android:maxWidth="326dp"
            android:text="@string/detail_content"
            android:textColor="#627180"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/detail_title2"
            app:layout_constraintHorizontal_bias="0"
            android:paddingBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>